# exan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  analysis.py  analysis_registry.py  app.py  boxcox_preprocessing.py  config.yaml  config_co2.yaml  config_loader.py  default_config.yaml  main.py  package-lock.json  playground.ipynb  pyproject.toml  relevance_decorator.py  style.yaml  todo.md
data/: CO2 contribution per capita.html  CO2 contribution per capita_static.html  co2_pcap_cons_with_continent.csv  co2_pcap_cons_with_continentsmall.csv  config.yaml  fake.csv  mock_data.csv
scripts/: clean.py  install_chrome.py
src/: app.py  main.py
src/scripts/: add_continent_column.py  clean.py
src/utils/: analyses.py  analysis_registry.py  config_loader.py  plot_registry.py  plots.py  preprocessing.py  reporting.py  types_custom.py
test_data/: fake.csv  my great experiment.html  my great experiment_static.html
tests/: test_analyses.py  test_boxcox_preprocessing.py  test_config_loader.py  test_data_loading.py  test_main.py  test_plots.py  test_preprocessing.py  test_relevance_decorator.py  test_reporting.py
utils/: analyses.py  boxcox_preprocessing.py  config_loader.py  filter_outliers.py  plot_registry.py  plots.py  preprocessing.py  relevance_decorator.py  reporting.py  types_custom.py
