[project]
name = "exan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-box>=7.3.2",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
    "fpdf2>=2.7.0",
    "typer[all]>=0.12.3",
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "bump-my-version>=1.2.1",
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
